--- a/pages/receive/receive.wxml
+++ b/pages/receive/receive.wxml
@@ -2,19 +2,19 @@
   <view class="body" wx:if="{{ code==0 }}">
 
   <view class="swiper-tab">
-    <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">东校区</view>
-    <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">西校区</view>
-    <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">南校区</view>
+    <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">成都校区</view>
+    <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">眉山校区</view>
+    <!-- <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">其他校区</view> -->
   </view>
 
   <view>
     <modal title="接单" hidden="{{modalHidden}}" confirm-text="确定" cancel-text="取消" bindconfirm="modalBindaconfirm" bindcancel="modalBindcancel">
-      代收人联系方式（义工登记表上填写的手机号）：<input bindinput="telVolunteer"/>
+      代收人联系方式（快递员登记表上填写的手机号）：<input bindinput="telVolunteer"/>
     </modal>
   </view> 
 
   <swiper current="{{currentTab}}" duration="300" bindchange="swiperTab" style="height: {{clientHeight?clientHeight+'px':'auto'}}">
-  <!-- 东区接单详情 -->
+  <!-- 成都校区接单详情 -->
     <swiper-item>
         <view wx:if="{{codeImagea == 2}}" class="content" >
           <view class="img">
@@ -26,7 +26,7 @@
           <view wx:for="{{arraya}}" wx:key="unique">
             <van-collapse-item title="收件地址：{{item.ReceiveAddress}}" name="{{item.Ono}}" class="con">
               <view class=".txt">
-                 <view> 取单号：{{item.Ono}}</view>
+                 <view> 取件码：{{item.Ono}}</view>
                  <view> 取件地址：{{item.SendAddress}}</view>
                  <view> 姓名：{{item.Sname}}</view>
                  <view> 手机号码：{{item.Sphone}}</view>
@@ -39,7 +39,7 @@
         </view>
     </swiper-item>
 
-<!-- 西区接单详情 -->
+<!-- 眉山校区接单详情 -->
     <swiper-item>
         <view wx:if="{{codeImageb == 4}}" class="content" >
           <view class="img">
@@ -51,7 +51,7 @@
           <view wx:for="{{arrayb}}" wx:key="unique">
             <van-collapse-item title="收件地址：{{item.ReceiveAddress}}" name="{{item.Ono}}" class="con">
               <view class=".txt">
-                 <view> 取单号：{{item.Ono}}</view>
+                 <view> 取件码：{{item.Ono}}</view>
                  <view> 取件地址：{{item.SendAddress}}</view>
                  <view> 姓名：{{item.Sname}}</view>
                  <view> 手机号码：{{item.Sphone}}</view>
@@ -64,8 +64,8 @@
         </view>
     </swiper-item>
     
-<!-- 南区接单详情 -->
-    <swiper-item>
+<!-- 其他校区接单详情 -->
+    <!-- <swiper-item>
         <view wx:if="{{codeImagec == 6}}" class="content" >
           <view class="img">
             <image src="../images/information.jpg" />  
@@ -76,7 +76,7 @@
           <view wx:for="{{arrayc}}" wx:key="unique">
             <van-collapse-item title="收件地址：{{item.ReceiveAddress}}" name="{{item.Ono}}" class="con">
               <view class=".txt">
-                 <view> 取单号：{{item.Ono}}</view>
+                 <view> 取件码：{{item.Ono}}</view>
                  <view> 取件地址：{{item.SendAddress}}</view>
                  <view> 姓名：{{item.Sname}}</view>
                  <view> 手机号码：{{item.Sphone}}</view>
@@ -87,7 +87,7 @@
           </view>
           </van-collapse>
         </view>
-    </swiper-item>
+    </swiper-item> -->
 
   </swiper>
 </view>
