--- a/pages/rule/rule.wxml
+++ b/pages/rule/rule.wxml
@@ -8,5 +8,5 @@
     <view>2、发单人可根据实际情况，在我的-发单详情-“投诉”选择是否对该单进行投诉。</view>
     <view>3、接单人一旦接单就需要完成该任务，<text style="color:red">不可中途退单。</text></view>
     <view>4、接单人完成快递派送后，需到我的-接单详情-“已完成”。</view>
-    <view>5、接单人义工学分：每完成订单整数6次加0.2分，收到投诉次数3次扣0.1分。只有当快递状态为<text style="color:red">“已收货”</text>时，该单才生效。</view>
+    <view>5、接单人收入：每完成订单一次加1元，收到投诉次数一次扣0.5元。只有当快递状态为<text style="color:red">“已收货”</text>时，该单才生效。</view>
 </view>
