--- a/pages/receiveInfo/receiveInfo.wxml
+++ b/pages/receiveInfo/receiveInfo.wxml
@@ -3,7 +3,7 @@
       <van-notice-bar
     left-icon="bullhorn-o"
     backgroundColor="#f2f2f2"
-    text="若您已将快递送给发单人，请去接单详情页点击“已完成”按钮”，以便计算学分"
+    text="若您已将快递送给发单人，请去接单详情页点击“已完成”按钮”，以便计算收入"
     color="black"
   />
   <van-collapse accordion value="{{ activeName }}" bind:change="onChange" wx:for="{{array}}" wx:for-item="item">
