--- a/pages/send/send.wxss
+++ b/pages/send/send.wxss
@@ -24,6 +24,7 @@ swiper image{
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  margin: 20px 0px 0px 0px;
 }
 
 .btn{
