--- a/pages/send/send.wxml
+++ b/pages/send/send.wxml
@@ -15,7 +15,7 @@
       <image src="../images/sendImg/2.jpg"></image>
     </swiper-item>
     <swiper-item>
-      <image src="../images/sendImg/3.jpg"></image>
+      <image src="../images/sendImg/4.png"></image>
     </swiper-item>
   </swiper>
 
