--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -10,7 +10,7 @@
     <view class="pwd">
         <van-icon name="lock" custom-class="person" size="28px"/>
         <input bindinput="password" password="{{ isPassword }}" value="{{password}}" placeholder="请输入密码"/>
-        <van-icon name="closed-eye" size="20px" custom-class="eye" bindtap="changePwd"/>
+        <van-icon name="{{eyestate?'eye-o':'closed-eye'}}" size="20px" custom-class="eye" bindtap="changePwd" class="eyeicon"/>
     </view>  
    
     <view class=".login">
