--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,89 +1,66 @@
 /* pages/login/login.wxss */
 .main{
-  overflow: hidden;
-  width: 100%;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.background {
-  width: 100%;
-  height: 100%;
-  position: fixed; 
-  background-size: 100% 100%;
-  z-index: -1;
-}
-.user{
-  width: 80%;
-  border-bottom: 1px solid gray;
-  margin: 50% auto 50rpx;
-  background: white; 
-}
-.pwd{
-  width: 80%;
-  border-bottom: 1px solid gray;
-  position: relative;
-  margin: 0 auto 100rpx;
-  background: white;  
-}
-.login{
-  width: 80%;  
-  margin: 0 auto; 
-}
-.btn{
-  position: relative;
-  top: 50%;
-  transform: translateY(-20%);
-  background: rgb(223, 236, 245);
-  font-size: 17px;
-  color: black;
-  border: 1px solid rgb(182, 170, 170);
-  border-radius: 2rem;
-}
-.person{
-  display: inline-block;
-  margin-left: 20rpx;
-  margin-right: 40rpx;
-  color: rgb(193, 208, 220) ;
-}
-.user input{
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  transform: translateY(-30%);
-}
-.pwd input{
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  transform: translateY(-30%);
-}
-.eye{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-20%);
-  left:45px
-}
-.args{
-  width: 95%;
-  position: absolute;
-  bottom: 50px;
-  text-align: center;
-  font-size: 12px;
-}
-.args navigator{
-  color: rgb(150, 204, 243);
-  display: inline-block
-}
+
 .img{
-  width: 95px;
-  height: 95px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto
+  height: 250rpx;
+  width: 250rpx;
+  margin-bottom: 100rpx;
 }
-#img{
-  position: relative;
-  margin-top: 80px;
+
+.user{
+  display: flex;
+  width: 80%;
+  height: 70rpx;
+  border-bottom: solid 1px black;
+}
+
+.user input{
+  height: 70rpx;
+  flex-grow: 1;
+}
+
+.pwd{
+  margin-top: 40rpx;
+  display: flex;
+  width: 80%;
+  height: 70rpx;
+  border-bottom: solid 1px black;
+}
+
+.pwd input{
+  height: 70rpx;
+  flex-grow: 1;
+}
+
+.eyeicon{
+  width: 80rpx;
+}
+
+.login{
+  margin-top: 90rpx;
+  width: 75%;
+  height: 80rpx;
+  line-height: 80rpx;
+}
+
+.login button{
+  border-radius: 30px;
+  height: 80rpx;
+  line-height: 80rpx;
+  background-color: rgb(223, 236, 245);
+  border: 1px solid rgb(182, 170, 170);
+}
+
+.args{
+  position: absolute;
+  bottom: 80rpx;
+}
+
+.args navigator{
+  display: inline-block;
+  color: rgb(66, 147, 252);
 }
