--- a/pages/send/send.wxss
+++ b/pages/send/send.wxss
@@ -1,42 +1,41 @@
-/* pages/send/send.wxss */
+page{
+  background-color: rgb(242,242,242);
+}
+
 .box{
   display: flex;
   flex-direction: column;
-  background-color: #f2f2f2;
-  height: 100vh;
-}
-
-van-notice-bar{
-  height: 30px;
+  align-items: center;
 }
 
 swiper{
   width: 100%;
+  height: 100%;
 }
+
 swiper image{
   width: 100%;
   height: 100%;
 }
 
+.lun{
+  width: 100%;
+  height: 300rpx;
+}
+
 .sendExpress{
   display: flex;
-  height: 600px;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  margin: 20px 0px 0px 0px;
+  width: 95%;
 }
 
 .btn{
-  border-radius: 8%;
-  height: 30px;
-  font-size: 16px;
-  line-height: 30px;
-  position: relative;
-  top:-10px;
+  margin-top: 30rpx;
+  margin-bottom: 60rpx;
+  height: 40px;
+  width: 80%;
+  line-height: 40px;
+  border-radius: 10px;
   background-color: rgb(236, 239, 241);
-}
-
-.lun{
-  height: 33%;
+  border: 1px solid rgb(161, 161, 161);
 }
